src/pytelo/_internal/wstlParser.py
# Generated from wstl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


'''
 Explainable Robotics Lab, Lehigh University
 See license.txt file for license information.
 @author: Gustavo A. Cardona, Cristian-Ioan Vasile
'''


class wstlParser ( Parser ):

    grammarFileName = "wstl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "','", "']'", "'^'", 
                     "'-('", "'*'", "'/'", "'+'", "'-'", "'<'", "'<='", 
                     "'='", "'>='", "'>'", "<INVALID>", "<INVALID>", "'=>'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'U'", "'R'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "AND", "OR", "IMPLIES", "NOT", "EVENT", 
                      "ALWAYS", "UNTIL", "RELEASE", "BOOLEAN", "VARIABLE", 
                      "RATIONAL", "WS" ]

    RULE_wstlProperty = 0
    RULE_expr = 1
    RULE_booleanExpr = 2

    ruleNames =  [ "wstlProperty", "expr", "booleanExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    AND=17
    OR=18
    IMPLIES=19
    NOT=20
    EVENT=21
    ALWAYS=22
    UNTIL=23
    RELEASE=24
    BOOLEAN=25
    VARIABLE=26
    RATIONAL=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class WstlPropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wstlParser.RULE_wstlProperty

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BooleanPredContext(WstlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wstlParser.WstlPropertyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExpr(self):
            return self.getTypedRuleContext(wstlParser.BooleanExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanPred" ):
                listener.enterBooleanPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanPred" ):
                listener.exitBooleanPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanPred" ):
                return visitor.visitBooleanPred(self)
            else:
                return visitor.visitChildren(self)


    class LongFormulaContext(WstlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wstlParser.WstlPropertyContext
            super().__init__(parser)
            self.op = None # Token
            self.weight = None # Token
            self.copyFrom(ctx)

        def wstlProperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wstlParser.WstlPropertyContext)
            else:
                return self.getTypedRuleContext(wstlParser.WstlPropertyContext,i)

        def AND(self):
            return self.getToken(wstlParser.AND, 0)
        def VARIABLE(self):
            return self.getToken(wstlParser.VARIABLE, 0)
        def OR(self):
            return self.getToken(wstlParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLongFormula" ):
                listener.enterLongFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLongFormula" ):
                listener.exitLongFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLongFormula" ):
                return visitor.visitLongFormula(self)
            else:
                return visitor.visitChildren(self)


    class FormulaContext(WstlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wstlParser.WstlPropertyContext
            super().__init__(parser)
            self.left = None # WstlPropertyContext
            self.op = None # Token
            self.child = None # WstlPropertyContext
            self.low = None # Token
            self.high = None # Token
            self.weight = None # Token
            self.right = None # WstlPropertyContext
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(wstlParser.NOT, 0)
        def wstlProperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wstlParser.WstlPropertyContext)
            else:
                return self.getTypedRuleContext(wstlParser.WstlPropertyContext,i)

        def EVENT(self):
            return self.getToken(wstlParser.EVENT, 0)
        def RATIONAL(self, i:int=None):
            if i is None:
                return self.getTokens(wstlParser.RATIONAL)
            else:
                return self.getToken(wstlParser.RATIONAL, i)
        def VARIABLE(self):
            return self.getToken(wstlParser.VARIABLE, 0)
        def ALWAYS(self):
            return self.getToken(wstlParser.ALWAYS, 0)
        def IMPLIES(self):
            return self.getToken(wstlParser.IMPLIES, 0)
        def AND(self):
            return self.getToken(wstlParser.AND, 0)
        def OR(self):
            return self.getToken(wstlParser.OR, 0)
        def UNTIL(self):
            return self.getToken(wstlParser.UNTIL, 0)
        def RELEASE(self):
            return self.getToken(wstlParser.RELEASE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormula" ):
                listener.enterFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormula" ):
                listener.exitFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula" ):
                return visitor.visitFormula(self)
            else:
                return visitor.visitChildren(self)


    class ParpropContext(WstlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wstlParser.WstlPropertyContext
            super().__init__(parser)
            self.child = None # WstlPropertyContext
            self.copyFrom(ctx)

        def wstlProperty(self):
            return self.getTypedRuleContext(wstlParser.WstlPropertyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParprop" ):
                listener.enterParprop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParprop" ):
                listener.exitParprop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParprop" ):
                return visitor.visitParprop(self)
            else:
                return visitor.visitChildren(self)



    def wstlProperty(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = wstlParser.WstlPropertyContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_wstlProperty, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = wstlParser.ParpropContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 7
                self.match(wstlParser.T__0)
                self.state = 8
                localctx.child = self.wstlProperty(0)
                self.state = 9
                self.match(wstlParser.T__1)
                pass

            elif la_ == 2:
                localctx = wstlParser.BooleanPredContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 11
                self.booleanExpr()
                pass

            elif la_ == 3:
                localctx = wstlParser.FormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 12
                localctx.op = self.match(wstlParser.NOT)
                self.state = 13
                localctx.child = self.wstlProperty(10)
                pass

            elif la_ == 4:
                localctx = wstlParser.FormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 14
                localctx.op = self.match(wstlParser.EVENT)
                self.state = 15
                self.match(wstlParser.T__2)
                self.state = 16
                localctx.low = self.match(wstlParser.RATIONAL)
                self.state = 17
                self.match(wstlParser.T__3)
                self.state = 18
                localctx.high = self.match(wstlParser.RATIONAL)
                self.state = 19
                self.match(wstlParser.T__4)
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 20
                    self.match(wstlParser.T__5)
                    self.state = 21
                    localctx.weight = self.match(wstlParser.VARIABLE)


                self.state = 24
                localctx.child = self.wstlProperty(9)
                pass

            elif la_ == 5:
                localctx = wstlParser.FormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 25
                localctx.op = self.match(wstlParser.ALWAYS)
                self.state = 26
                self.match(wstlParser.T__2)
                self.state = 27
                localctx.low = self.match(wstlParser.RATIONAL)
                self.state = 28
                self.match(wstlParser.T__3)
                self.state = 29
                localctx.high = self.match(wstlParser.RATIONAL)
                self.state = 30
                self.match(wstlParser.T__4)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 31
                    self.match(wstlParser.T__5)
                    self.state = 32
                    localctx.weight = self.match(wstlParser.VARIABLE)


                self.state = 35
                localctx.child = self.wstlProperty(8)
                pass

            elif la_ == 6:
                localctx = wstlParser.LongFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 36
                localctx.op = self.match(wstlParser.AND)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 37
                    self.match(wstlParser.T__5)
                    self.state = 38
                    localctx.weight = self.match(wstlParser.VARIABLE)


                self.state = 41
                self.match(wstlParser.T__0)
                self.state = 42
                self.wstlProperty(0)
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 43
                    self.match(wstlParser.T__3)
                    self.state = 44
                    self.wstlProperty(0)
                    self.state = 47 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==4):
                        break

                self.state = 49
                self.match(wstlParser.T__1)
                pass

            elif la_ == 7:
                localctx = wstlParser.LongFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                localctx.op = self.match(wstlParser.OR)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 52
                    self.match(wstlParser.T__5)
                    self.state = 53
                    localctx.weight = self.match(wstlParser.VARIABLE)


                self.state = 56
                self.match(wstlParser.T__0)
                self.state = 57
                self.wstlProperty(0)
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 58
                    self.match(wstlParser.T__3)
                    self.state = 59
                    self.wstlProperty(0)
                    self.state = 62 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==4):
                        break

                self.state = 64
                self.match(wstlParser.T__1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 109
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = wstlParser.FormulaContext(self, wstlParser.WstlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wstlProperty)
                        self.state = 68
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 69
                        localctx.op = self.match(wstlParser.IMPLIES)
                        self.state = 70
                        localctx.right = self.wstlProperty(8)
                        pass

                    elif la_ == 2:
                        localctx = wstlParser.FormulaContext(self, wstlParser.WstlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wstlProperty)
                        self.state = 71
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 72
                        localctx.op = self.match(wstlParser.AND)
                        self.state = 75
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==6:
                            self.state = 73
                            self.match(wstlParser.T__5)
                            self.state = 74
                            localctx.weight = self.match(wstlParser.VARIABLE)


                        self.state = 77
                        localctx.right = self.wstlProperty(7)
                        pass

                    elif la_ == 3:
                        localctx = wstlParser.FormulaContext(self, wstlParser.WstlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wstlProperty)
                        self.state = 78
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 79
                        localctx.op = self.match(wstlParser.OR)
                        self.state = 82
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==6:
                            self.state = 80
                            self.match(wstlParser.T__5)
                            self.state = 81
                            localctx.weight = self.match(wstlParser.VARIABLE)


                        self.state = 84
                        localctx.right = self.wstlProperty(5)
                        pass

                    elif la_ == 4:
                        localctx = wstlParser.FormulaContext(self, wstlParser.WstlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wstlProperty)
                        self.state = 85
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 86
                        localctx.op = self.match(wstlParser.UNTIL)
                        self.state = 87
                        self.match(wstlParser.T__2)
                        self.state = 88
                        localctx.low = self.match(wstlParser.RATIONAL)
                        self.state = 89
                        self.match(wstlParser.T__3)
                        self.state = 90
                        localctx.high = self.match(wstlParser.RATIONAL)
                        self.state = 91
                        self.match(wstlParser.T__4)
                        self.state = 94
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==6:
                            self.state = 92
                            self.match(wstlParser.T__5)
                            self.state = 93
                            localctx.weight = self.match(wstlParser.VARIABLE)


                        self.state = 96
                        localctx.right = self.wstlProperty(3)
                        pass

                    elif la_ == 5:
                        localctx = wstlParser.FormulaContext(self, wstlParser.WstlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wstlProperty)
                        self.state = 97
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 98
                        localctx.op = self.match(wstlParser.RELEASE)
                        self.state = 99
                        self.match(wstlParser.T__2)
                        self.state = 100
                        localctx.low = self.match(wstlParser.RATIONAL)
                        self.state = 101
                        self.match(wstlParser.T__3)
                        self.state = 102
                        localctx.high = self.match(wstlParser.RATIONAL)
                        self.state = 103
                        self.match(wstlParser.T__4)
                        self.state = 106
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==6:
                            self.state = 104
                            self.match(wstlParser.T__5)
                            self.state = 105
                            localctx.weight = self.match(wstlParser.VARIABLE)


                        self.state = 108
                        localctx.right = self.wstlProperty(2)
                        pass

             
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wstlParser.ExprContext)
            else:
                return self.getTypedRuleContext(wstlParser.ExprContext,i)


        def VARIABLE(self):
            return self.getToken(wstlParser.VARIABLE, 0)

        def RATIONAL(self):
            return self.getToken(wstlParser.RATIONAL, 0)

        def getRuleIndex(self):
            return wstlParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = wstlParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 115
                _la = self._input.LA(1)
                if not(_la==1 or _la==7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 116
                self.expr(0)
                self.state = 117
                self.match(wstlParser.T__1)
                pass

            elif la_ == 2:
                self.state = 119
                self.match(wstlParser.VARIABLE)
                self.state = 120
                self.match(wstlParser.T__0)
                self.state = 121
                self.expr(0)
                self.state = 122
                self.match(wstlParser.T__1)
                pass

            elif la_ == 3:
                self.state = 124
                self.match(wstlParser.RATIONAL)
                pass

            elif la_ == 4:
                self.state = 125
                self.match(wstlParser.VARIABLE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 137
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = wstlParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 128
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 129
                        self.match(wstlParser.T__5)
                        self.state = 130
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = wstlParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 131
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 132
                        _la = self._input.LA(1)
                        if not(_la==8 or _la==9):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 133
                        self.expr(5)
                        pass

                    elif la_ == 3:
                        localctx = wstlParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 134
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 135
                        _la = self._input.LA(1)
                        if not(_la==10 or _la==11):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 136
                        self.expr(4)
                        pass

             
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BooleanExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wstlParser.ExprContext)
            else:
                return self.getTypedRuleContext(wstlParser.ExprContext,i)


        def BOOLEAN(self):
            return self.getToken(wstlParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return wstlParser.RULE_booleanExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpr" ):
                listener.enterBooleanExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpr" ):
                listener.exitBooleanExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanExpr" ):
                return visitor.visitBooleanExpr(self)
            else:
                return visitor.visitChildren(self)




    def booleanExpr(self):

        localctx = wstlParser.BooleanExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_booleanExpr)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 7, 26, 27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                localctx.left = self.expr(0)
                self.state = 143
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 126976) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 144
                localctx.right = self.expr(0)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                localctx.op = self.match(wstlParser.BOOLEAN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.wstlProperty_sempred
        self._predicates[1] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def wstlProperty_sempred(self, localctx:WstlPropertyContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 1)
         

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 5:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 3)
         




